[project]
name = "athletic-mindset-backend"
version = "0.1.0"
description = "Athletic Mindset — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "httpx>=0.28.1",
    "stripe>=15.3.1",
]
